[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmind-sdk"
version = "0.1.0"
description = "Python SDK for AgentMind agent infrastructure platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Patrick Olumba" }
]
dependencies = [
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/patdal1810/agentmind"
Repository = "https://github.com/patdal1810/agentmind"