[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmind-sdk"
version = "0.1.0"
description = "Python SDK for AgentMind agent infrastructure platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Olumba Chidubem Patrick" }
]
dependencies = [
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/patdal1810/agent-mind-apps"
Repository = "https://github.com/patdal1810/agent-mind-apps"